2008-08-31  Brian G. Merrell <bgmerrell@gmail.com>

	* src/TaskTreeView.cs: Display relevant information in the status bar,
	including a cute (according to Sandy) countdown when completing tasks.
	This is a fix for Bug 533033, with many good ideas from steve
	evolvedlight co uk
	* src/TaskWindow.cs: Display relevant information in the status bar.
	Again, many contributions from steve evolvedlight co uk.
	* src/Application.cs: Just a silly little tooltip for the tray icon.  
	In the future we'll want something like Bug 532915 describes.

2008-08-26  Brian Merrell <bgmerrell@gmail.com>

	* src/AbstractTask.cs: add id property to abstract
	* src/Backends/Sqlite/SqliteTask.cs: add id property
	* src/Backends/Sqlite/SqliteBackend.cs: add id property
	* src/Backends/Rtm/RtmTask.cs: add id property
	* src/Backends/IceCore/IceTask.cs: add id property
	* src/Backends/EDS/EDSTask.cs: add id property
	* src/ITask.cs: add id property
	* src/RemoteControl.cs: add id property to dbus interface, this (and
	the above changes) fixes Bug 526492.  Thanks Thomas Van Machelen!
	* README: update with current info
	* MAINTAINERS: -boyd -calvin +sandy +brian

2008-08-18  Sandy Armstrong <sanfordarmstrong@gmail.com> 

	* configure.ac: Bump version to 0.1.8.

2008-08-18  Sandy Armstrong <sanfordarmstrong@gmail.com> 

	* NEWS: Update for 0.1.7.

2008-08-06  Sandy Armstrong <sanfordarmstrong@gmail.com> 

	* src/Application.cs: Make sure to run Catalog.Init first thing when
	  the app starts.

2008-07-28  Brian Merrell <bgmerrell@gmail.com>

	* src/NoteDialog.cs:  Scroll to bottom of window when a new note is
	created.  Cancel *new* note creation on Esc.  
	* src/NoteWidget.cs:  Disallow saving empty notes.  Expose public
	method to focus on TextView widget.

2008-07-17  Brian Merrell <bgmerrell@gmail.com>

	* configure.ac, src/PreferencesDialog.cs, src/Makefile.am: Added
	check for gtk-2.12+ with #if/#else to conditionally use the GtkTooltip