@@ -31,11 +31,17 @@ namespace Tasque.Backends.Dummy
 		
 		#region Public Properties
 		
-		public int Id
+		public int DummyId
 		{
 			get { return id; }
 			set { id = value; }
 		}
+
+		public override string Id
+		{
+			get { return id.ToString(); }
+		}
+
 		
 		public override string Name
 		{
